web-infras/parser/tests/fixtures/babel/core/uncategorised/415/output.txt
[SyntaxError]: Invalid left-hand side in for-in loop: Must have a single binding. (1,6)
1|for (var i, i2 in {});
 |    ^
